[package]
name = "asset-ops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
thiserror = "1.0.49"
regex = "1.9.5"
serde = { version = "1.0.188", features = ['derive'] }
serde_json = "1.0.107"
strum = { version = "0.25", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4.0"

image = {version="0.24.7", features=['jpeg', 'png']}